--- a/src/data/categories/resources.yaml
+++ b/src/data/categories/resources.yaml
@@ -1,3 +1,3 @@
 id: Resources
 title: Web Dev Resources
-description: "> General web development resources."
+description: '> General web development resources.'
