--- a/.graphqlrc.json
+++ b/.graphqlrc.json
@@ -1,8 +1,8 @@
 {
   "schema": [
-    "//workspace/BGOONZ_BLOG_2.0/functions/netlifyGraph/netlifyGraphSchema.graphql"
+    "./functions/netlifyGraph/netlifyGraphSchema.graphql"
   ],
   "schemaPath": [
-    "//workspace/BGOONZ_BLOG_2.0/functions/netlifyGraph/netlifyGraphSchema.graphql"
+    "./functions/netlifyGraph/netlifyGraphSchema.graphql"
   ]
 }
